opam-version: "2.0"
synopsis:     "Library implementing DNSvizor things"
name:         "miragevpn"
homepage:     "https://github.com/robur-coop/dnsvizor"
dev-repo:     "git+https://github.com/robur-coop/dnsvizor.git"
bug-reports:  "https://github.com/robur-coop/dnsvizor/issues"
doc:          "https://github.com/robur-coop/dnsvizor/doc"
author:       ["robur"]
maintainer:   ["robur"]
license:      "BSD-2-Clause"

build: [
  ["dune" "subst" ] {dev}
  ["dune" "build"   "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {>= "2.9"}
  "ocaml" {>= "4.14.0"}
  "odoc" {with-doc}

  "angstrom" { >= "0.14.0" }
  "fmt" {>= "0.9.0"}
  "ipaddr" {>= "5.6.0"}
  "cmdliner" {>= "1.2.0"}

  "alcotest" {with-test & >= "1.8.0"}
  "logs" {with-test & >= "0.7.0"}
]
available: arch != "arm32" & arch != "x86_32"
